bacco landing page fix

--- a/bacco-landingpage/index.html
+++ b/bacco-landingpage/index.html
@@ -19,17 +19,17 @@
             <a href="/">Home</a>
           </li>
           <li>
-            <a href="/sobre">Sobre</a>
+            <a href="/">Sobre</a>
           </li>
           <li>
             <a href="">Caminho do Vinho</a>
           </li>
           <li>
-            <a href="">Serviços</a>
+            <a href="https://bacco.app/shop">Web Store</a>
           </li>
         </ul>
       </nav>
-      <a href="/contato">Contato</a>
+      <a href="/">Contato</a>
     </header>
             <!-- INICIO MENU MOBILE -->
             <div class="b-menu-mobile-img">
@@ -52,14 +52,17 @@
                           <div class="b-menu-mobile">
                               <ul class="navbar-nav">
                                   <li class="nav-item">
-                                      <a class="nav-link js-scroll-trigger" href="/index.html">Home</a>
+                                      <a class="nav-link js-scroll-trigger" href="/">Home</a>
                                   </li>
                                   <li class="nav-item">
-                                      <a class="nav-link js-scroll-trigger" href="/sobre.html">Sobre</a>
+                                      <a class="nav-link js-scroll-trigger" href="/">Sobre</a>
                                   </li>
                                   <li class="nav-item">
-                                      <a class="nav-link js-scroll-trigger" href="/caminhoDoVinho.html">Caminho do Vinho</a>
-                                  </li>                                
+                                      <a class="nav-link js-scroll-trigger" href="/">Caminho do Vinho</a>
+                                  </li>   
+                                  <li class="nav-item">
+                                      <a class="nav-link js-scroll-trigger" href="https://bacco.app/shop">Web Store</a>
+                                  </li>                              
                               </ul>
                           </div>
                   </div>
@@ -69,12 +72,12 @@
 
     <section class="sectionOne">
       <div class="sectionOneData">
-        <img src="./assets//img//logoSectionOne.png" alt="Logo da Bacco">
+        <img src="./assets/img/logoSectionOne.png" alt="Logo da Bacco">
         <h1>Bacco Smart <span>Wine</span></h1>
         <p>Conheça a primeira plataforma com adega autônoma</p>
         <p>do Brasil, clube exclusivo & investimento</p>
         <p> em safras de vinho</p>
-        <a href="/saberMais">Saber Mais</a>
+        <a href="/">Saber Mais</a>
       </div>
     </section>
     <section class="sectionTwo">
@@ -131,14 +134,14 @@
     <footer>
       <ul>
         <li>
-          <a href="">contato@bacco.com</a>
+          <a href="">contato@bacco.app</a>
         </li>
         <li>
           <img src="./assets/img/logo.png" alt="Logo da Bacco">
           <p>Copyright & Direitos Reservados 2022</p>
         </li>
         <li>
-          <a href="te:5541995556667" target="_blank">+55 41 99555666-7</a>
+          <a href="te:554796198243" target="_blank">+55 47 9619-8243</a>
         </li>
       </ul>
     </footer>
